--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,18 @@
 plugins {
-    id 'idea'
     id 'maven-publish'
+    id 'signing'
+    id 'idea'
     id "org.springframework.boot" version "1.5.20.RELEASE" apply(false)
 }
 
 allprojects {
+    repositories {
+        maven { url "https://oss.sonatype.org/content/groups/staging/" }
+        mavenCentral()
+    }
+}
+
+subprojects { project ->
 
     apply plugin: 'io.spring.dependency-management'
     dependencyManagement {
@@ -29,13 +37,14 @@ allprojects {
         }
     }
 
-    repositories {
-        maven { url "https://nexus.au32.cn/repository/maven-public/" }
-        maven { url "http://localhost:8020/repository/maven-public/" }
-        maven { url "https://jitpack.io" }
-        mavenCentral()
-    }
+    group 'com.github.peacetrue'
+    version '1.0-SNAPSHOT'
+//    version '1.0-RELEASE'
+    description '基于spring-boot的操作日志组件'
 
+    apply plugin: 'java'
+    sourceCompatibility = 1.8
+    
     dependencies {
         compileOnly "org.projectlombok:lombok"
         annotationProcessor "org.projectlombok:lombok"
@@ -46,28 +55,53 @@ allprojects {
         testAnnotationProcessor "org.projectlombok:lombok"
     }
 
-    group 'com.github.peacetrue'
-    version '1.0-SNAPSHOT'
-    description '基于spring的操作日志组件'
-    sourceCompatibility = 1.8
-
-    apply plugin: 'java'
-    apply plugin: 'maven-publish'
+    //样章不需要打包
+    if (name.endsWith('sample')) return
 
     task sourcesJar(type: Jar) {
-        classifier = "sources"
+        archiveClassifier = 'sources'
         from sourceSets.main.allJava
     }
 
     task javadocJar(type: Jar) {
-        classifier = 'javadoc'
+        archiveClassifier = 'javadoc'
         from javadoc.destinationDir
     }
 
+    def repository_snapshots = "https://oss.sonatype.org/content/repositories/snapshots/"
+    def repository_releases = "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
+
+    apply plugin: 'maven-publish'
+    apply plugin: 'signing'
     publishing {
         publications {
             mavenJava(MavenPublication) {
+                pom {
+                    name = project.name
+                    description = project.description
+                    url = 'https://github.com/peacetrue/log'
+                    licenses {
+                        license {
+                            name = 'The Apache License, Version 2.0'
+                            url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                        }
+                    }
+                    developers {
+                        developer {
+                            id = 'xiayouxue'
+                            name = 'xiayouxue'
+                            email = 'xiayouxue@hotmail.com'
+                        }
+                    }
+                    scm {
+                        connection = 'https://github.com/peacetrue/log.git'
+                        developerConnection = 'https://github.com/peacetrue/log.git'
+                        url = 'https://github.com/peacetrue/peacetrue/log'
+                    }
+                }
+
                 from components.java
+
                 artifact sourcesJar
                 artifact javadocJar
             }
@@ -75,15 +109,22 @@ allprojects {
 
         repositories {
             maven {
-                def releasesRepoUrl = "https://nexus.au32.cn/repository/maven-releases"
-                def snapshotsRepoUrl = "https://nexus.au32.cn/repository/maven-snapshots"
-                url version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
+                url version.endsWith('SNAPSHOT') ? repository_snapshots : repository_releases
                 credentials {
-                    username = 'admin'
-                    password = 'gold2018'
+                    username = ossrhUsername
+                    password = ossrhPassword
                 }
             }
+
+//            maven {
+//                name = 'myRepo'
+//                url = "file://${buildDir}/repo"
+//            }
         }
+    }
+
+    signing {
+        sign publishing.publications.mavenJava
     }
 
 }
