--- a/log-service-api/build.gradle
+++ b/log-service-api/build.gradle
@@ -1,6 +1,5 @@
 description '日志服务接口'
 
 dependencies {
-    compile 'com.github.peacetrue:spring-data-commons-page:1.0'
-    compile 'com.github.peacetrue:peacetrue-core:1.0-SNAPSHOT'
+    compile 'com.github.peacetrue:spring-data-commons-page:1.0-RELEASE'
 }
