--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,6 @@
-rootProject.name = 'log'
-include 'log-service-api'
-include 'log-service-mybatis'
-include 'log-controller'
-include 'log-aspect'
-include 'log-sample'
+rootProject.name = 'peacetrue-log'
+include 'peacetrue-log-service-api'
+include 'peacetrue-log-service-mybatis'
+include 'peacetrue-log-controller'
+include 'peacetrue-log-aspect'
+include 'peacetrue-log-sample'
