--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ plugins {
 allprojects {
     repositories {
         maven { url "https://oss.sonatype.org/content/groups/staging/" }
+        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
         mavenCentral()
     }
 }
@@ -39,12 +40,11 @@ subprojects { project ->
 
     group 'com.github.peacetrue'
     version '1.0-SNAPSHOT'
-//    version '1.0-RELEASE'
     description '基于spring-boot的操作日志组件'
 
     apply plugin: 'java'
     sourceCompatibility = 1.8
-    
+
     dependencies {
         compileOnly "org.projectlombok:lombok"
         annotationProcessor "org.projectlombok:lombok"
@@ -115,11 +115,6 @@ subprojects { project ->
                     password = ossrhPassword
                 }
             }
-
-//            maven {
-//                name = 'myRepo'
-//                url = "file://${buildDir}/repo"
-//            }
         }
     }
 
