--- a/peacetrue-log-controller/build.gradle
+++ b/peacetrue-log-controller/build.gradle
@@ -2,7 +2,7 @@ description '日志控制器'
 
 dependencies {
 
-    compile project(":log-service-api")
+    compile project(":peacetrue-log-service-api")
     compile 'org.slf4j:slf4j-api'
     compile "org.springframework:spring-webmvc"
     compile 'org.springframework.data:spring-data-commons'
@@ -12,5 +12,5 @@ dependencies {
     testCompile 'junit:junit'
     testCompile 'org.springframework.boot:spring-boot-starter-test'
     testCompile 'org.springframework.boot:spring-boot-starter-web'
-    testCompile project(path: ':log-service-mybatis', configuration: 'testArtifacts')
+    testCompile project(path: ':peacetrue-log-service-mybatis', configuration: 'testArtifacts')
 }
