--- a/settings.gradle
+++ b/settings.gradle
@@ -4,3 +4,4 @@ include 'peacetrue-log-service-mybatis'
 include 'peacetrue-log-controller'
 include 'peacetrue-log-aspect'
 include 'peacetrue-log-sample'
+include 'peacetrue-log-type'
