--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'signing'
     id 'idea'
     id "org.springframework.boot" version "1.5.20.RELEASE" apply(false)
+    id 'java-library'
 }
 
 allprojects {
@@ -26,12 +27,12 @@ subprojects { project ->
             dependency 'org.projectlombok:lombok:1.18.6'
             dependency 'io.github.benas:random-beans:3.7.0'
             dependency 'org.unitils:unitils-core:3.4.2'
-            dependency 'mysql:mysql-connector-java:5.1.39'
+            dependency 'mysql:mysql-connector-java:5.1.46'
             dependency 'com.h2database:h2:1.4.196'
             dependency 'org.mybatis:mybatis:3.4.6'
             dependency 'org.mybatis:mybatis-spring:1.3.0'
             dependency 'org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.2'
-            dependency 'org.mybatis.dynamic-sql:mybatis-dynamic-sql:1.1.0'
+            dependency 'org.mybatis.dynamic-sql:mybatis-dynamic-sql:1.1.2'
             dependency 'com.github.pagehelper:pagehelper:5.1.2'
             dependency 'com.github.pagehelper:pagehelper-spring-boot-starter:1.2.3'
             dependency 'org.aspectj:aspectjweaver:1.9.0'
@@ -39,10 +40,11 @@ subprojects { project ->
     }
 
     group 'com.github.peacetrue.log'
-    version '1.0.1-SNAPSHOT'
+    version '2.0-SNAPSHOT'
     description '基于spring-boot的操作日志组件'
 
     apply plugin: 'java'
+    apply plugin: 'java-library'
     sourceCompatibility = 1.8
 
     dependencies {
