--- a/peacetrue-log-aspect/build.gradle
+++ b/peacetrue-log-aspect/build.gradle
@@ -2,16 +2,17 @@ description '日志切面'
 
 dependencies {
 
-    compile project(":peacetrue-log-service-api")
-    compile "org.slf4j:slf4j-api"
-    compile 'org.aspectj:aspectjweaver'
-    compile "com.fasterxml.jackson.core:jackson-databind"
-    compile "org.springframework.boot:spring-boot-autoconfigure"
-    compileClasspath "org.springframework.boot:spring-boot-configuration-processor"
+    api project(":peacetrue-log-service-api")
+    api 'org.slf4j:slf4j-api'
+    implementation 'org.aspectj:aspectjweaver'
+    implementation "com.fasterxml.jackson.core:jackson-databind"
+    implementation "org.springframework.boot:spring-boot-autoconfigure"
+    compileOnly "org.springframework.boot:spring-boot-configuration-processor"
+    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 
     testCompile "junit:junit"
-    testCompileOnly "org.projectlombok:lombok"
-    testAnnotationProcessor "org.projectlombok:lombok"
-    testCompile 'org.springframework.boot:spring-boot-starter-test'
-    testCompile 'org.springframework.boot:spring-boot-starter-logging'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.boot:spring-boot-starter-logging'
+    testImplementation project(path: ':peacetrue-log-service-mybatis', configuration: 'testArtifacts')
+
 }
