--- a/peacetrue-log-sample/src/main/resources/application.yml
+++ b/peacetrue-log-sample/src/main/resources/application.yml
@@ -19,6 +19,7 @@ spring:
     include: datasource
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
+    time-zone: Asia/Shanghai
 #    default-property-inclusion: non_empty
 
 server:
