--- a/peacetrue-log-type/build.gradle
+++ b/peacetrue-log-type/build.gradle
@@ -2,10 +2,10 @@ description '日志服务类型'
 
 dependencies {
     api project(":peacetrue-log-service-api")
-    api 'com.github.peacetrue.serialize:peacetrue-serialize-api:1.0-SNAPSHOT'
-    implementation "com.github.peacetrue:peacetrue-spring:1.1.1-SNAPSHOT"
-    implementation 'com.github.peacetrue:peacetrue-jackson:1.2.2-SNAPSHOT'
+    compileOnly 'com.github.peacetrue.serialize:peacetrue-serialize-api:1.0-SNAPSHOT'
+    compileOnly 'com.github.peacetrue:peacetrue-jackson:1.2.2-SNAPSHOT'
+    compileOnly "com.github.peacetrue:peacetrue-spring:1.1.1-SNAPSHOT"
     implementation "org.springframework.boot:spring-boot-autoconfigure"
-    compileOnly "org.springframework.boot:spring-boot-autoconfigure"
-    annotationProcessor "org.springframework.boot:spring-boot-autoconfigure"
+    compileOnly "org.springframework.boot:spring-boot-configuration-processor"
+    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 }
