--- a/peacetrue-log-aspect/build.gradle
+++ b/peacetrue-log-aspect/build.gradle
@@ -4,7 +4,7 @@ dependencies {
 
     api project(":peacetrue-log-service-api")
     api 'org.slf4j:slf4j-api'
-    implementation 'org.aspectj:aspectjweaver'
+    api 'org.aspectj:aspectjweaver'
     implementation "com.fasterxml.jackson.core:jackson-databind"
     implementation "org.springframework.boot:spring-boot-autoconfigure"
     compileOnly "org.springframework.boot:spring-boot-configuration-processor"
