--- a/build.gradle
+++ b/build.gradle
@@ -1,56 +1,51 @@
 plugins {
-    id 'maven-publish'
-    id 'signing'
-    id 'idea'
-    id "org.springframework.boot" version "1.5.20.RELEASE" apply(false)
-    id 'java-library'
+    id "maven-publish"
+    id "signing"
+    id "idea"
+    id("io.spring.dependency-management") version "1.0.8.RELEASE"
+    id "java-library"
 }
 
-allprojects {
+allprojects { project ->
+
+    group "com.github.peacetrue.log"
+    version "2.0.0-SNAPSHOT"
+    description "基于spring-boot的操作日志组件"
+
+    apply plugin: "java"
+    apply plugin: "java-library"
+    sourceCompatibility = 1.8
+    targetCompatibility = 8
+
     repositories {
         maven { url "https://oss.sonatype.org/content/groups/staging/" }
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
         mavenCentral()
     }
-}
 
-subprojects { project ->
-
-    apply plugin: 'io.spring.dependency-management'
-    dependencyManagement {
-        imports {
-            mavenBom "org.springframework.boot:spring-boot-dependencies:1.5.20.RELEASE"
-        }
-
-        dependencies {
-            dependency 'com.google.code.findbugs:jsr305:1.3.9'
-            dependency 'org.projectlombok:lombok:1.18.6'
-            dependency 'io.github.benas:random-beans:3.7.0'
-            dependency 'org.unitils:unitils-core:3.4.2'
-            dependency 'mysql:mysql-connector-java:5.1.46'
-            dependency 'com.h2database:h2:1.4.196'
-            dependency 'org.mybatis:mybatis:3.4.6'
-            dependency 'org.mybatis:mybatis-spring:1.3.0'
-            dependency 'org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.2'
-            dependency 'org.mybatis.dynamic-sql:mybatis-dynamic-sql:1.1.2'
-            dependency 'com.github.pagehelper:pagehelper:5.1.2'
-            dependency 'com.github.pagehelper:pagehelper-spring-boot-starter:1.2.3'
-            dependency 'org.aspectj:aspectjweaver:1.9.0'
+    apply plugin: "idea"
+    idea {
+        module {
+            inheritOutputDirs = false
+            outputDir = tasks.compileJava.destinationDir
+            testOutputDir = tasks.compileTestJava.destinationDir
+            downloadSources = true
+            downloadJavadoc = false
         }
     }
 
-    group 'com.github.peacetrue.log'
-    version '2.0-SNAPSHOT'
-    description '基于spring-boot的操作日志组件'
-
-    apply plugin: 'java'
-    apply plugin: 'java-library'
-    sourceCompatibility = 1.8
+    apply plugin: "io.spring.dependency-management"
+    dependencyManagement {
+        imports {
+            mavenBom "org.springframework.boot:spring-boot-dependencies:2.1.8.RELEASE"
+            mavenBom "com.github.peacetrue:peacetrue-dependencies:2.0.0-SNAPSHOT"
+        }
+    }
 
     dependencies {
         compileOnly "org.projectlombok:lombok"
         annotationProcessor "org.projectlombok:lombok"
-        compile 'com.google.code.findbugs:jsr305'
+        compile "com.google.code.findbugs:jsr305"
 
         testCompile "junit:junit"
         testCompileOnly "org.projectlombok:lombok"
@@ -58,47 +53,47 @@ subprojects { project ->
     }
 
     //样章不需要打包
-    if (name.endsWith('sample')) return
+    if (name.endsWith("sample")) return
 
     task sourcesJar(type: Jar) {
-        archiveClassifier = 'sources'
+        archiveClassifier = "sources"
         from sourceSets.main.allJava
     }
 
     task javadocJar(type: Jar) {
-        archiveClassifier = 'javadoc'
+        archiveClassifier = "javadoc"
         from javadoc.destinationDir
     }
 
     def repository_snapshots = "https://oss.sonatype.org/content/repositories/snapshots/"
     def repository_releases = "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
 
-    apply plugin: 'maven-publish'
-    apply plugin: 'signing'
+    apply plugin: "maven-publish"
+    apply plugin: "signing"
     publishing {
         publications {
             mavenJava(MavenPublication) {
                 pom {
                     name = project.name
                     description = project.description
-                    url = 'https://github.com/peacetrue/log'
+                    url = "https://github.com/peacetrue/log"
                     licenses {
                         license {
-                            name = 'The Apache License, Version 2.0'
-                            url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                            name = "The Apache License, Version 2.0"
+                            url = "http://www.apache.org/licenses/LICENSE-2.0.txt"
                         }
                     }
                     developers {
                         developer {
-                            id = 'xiayouxue'
-                            name = 'xiayouxue'
-                            email = 'xiayouxue@hotmail.com'
+                            id = "xiayouxue"
+                            name = "xiayouxue"
+                            email = "xiayouxue@hotmail.com"
                         }
                     }
                     scm {
-                        connection = 'https://github.com/peacetrue/log.git'
-                        developerConnection = 'https://github.com/peacetrue/log.git'
-                        url = 'https://github.com/peacetrue/peacetrue/log'
+                        connection = "https://github.com/peacetrue/log.git"
+                        developerConnection = "https://github.com/peacetrue/log.git"
+                        url = "https://github.com/peacetrue/peacetrue/log"
                     }
                 }
 
@@ -111,7 +106,7 @@ subprojects { project ->
 
         repositories {
             maven {
-                url version.endsWith('SNAPSHOT') ? repository_snapshots : repository_releases
+                url version.endsWith("SNAPSHOT") ? repository_snapshots : repository_releases
                 credentials {
                     username = ossrhUsername
                     password = ossrhPassword
