--- a/peacetrue-log-sample/src/main/resources/application.yml
+++ b/peacetrue-log-sample/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 logging:
   level:
     org:
-      springframework: debug
+      springframework: trace
     com:
       github:
         peacetrue: trace
