--- a/peacetrue-log-service-api/build.gradle
+++ b/peacetrue-log-service-api/build.gradle
@@ -1,6 +1,6 @@
 description '日志服务接口'
 
 dependencies {
-    api 'com.github.peacetrue:spring-data-commons-page:1.0-RELEASE'
-    api 'com.github.peacetrue:peacetrue-core:1.0-SNAPSHOT'
+    api 'com.github.peacetrue:spring-data-commons-page'
+    api 'com.github.peacetrue:peacetrue-core'
 }
