--- a/peacetrue-log-type/build.gradle
+++ b/peacetrue-log-type/build.gradle
@@ -2,9 +2,10 @@ description '日志服务类型'
 
 dependencies {
     api project(":peacetrue-log-service-api")
-    compileOnly 'com.github.peacetrue.serialize:peacetrue-serialize-api:1.0-SNAPSHOT'
-    compileOnly 'com.github.peacetrue:peacetrue-jackson:1.2.2-SNAPSHOT'
-    compileOnly "com.github.peacetrue:peacetrue-spring:1.1.1-SNAPSHOT"
+    compileOnly 'com.github.peacetrue.serialize:peacetrue-serialize-api'
+    compileOnly 'com.github.peacetrue:peacetrue-jackson'
+    compileOnly "com.github.peacetrue:peacetrue-spring"
+    compileOnly "com.fasterxml.jackson.core:jackson-databind"
     implementation "org.springframework.boot:spring-boot-autoconfigure"
     compileOnly "org.springframework.boot:spring-boot-configuration-processor"
     annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
