--- a/peacetrue-log-service-mybatis/build.gradle
+++ b/peacetrue-log-service-mybatis/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     implementation 'com.github.peacetrue:peacetrue-spring:1.1.1-SNAPSHOT'
     implementation 'org.springframework.data:spring-data-commons'
     implementation "org.springframework.boot:spring-boot-autoconfigure"
+    implementation "javax.annotation:javax.annotation-api:1.3.2"
     compileOnly "org.springframework.boot:spring-boot-configuration-processor"
     annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 
