--- a/build.gradle
+++ b/build.gradle
@@ -1,134 +1,72 @@
-plugins {
-    id 'maven-publish'
-    id 'signing'
-    id 'idea'
-    id "org.springframework.boot" version "1.5.20.RELEASE" apply(false)
-    id 'java-library'
-}
-
-allprojects {
+buildscript {
     repositories {
-        maven { url "https://oss.sonatype.org/content/groups/staging/" }
-        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+        mavenLocal()
         mavenCentral()
+        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+        maven { url 'https://repo.spring.io/plugins-release' }
+    }
+
+    dependencies {
+        classpath('com.github.peacetrue.generator:peacetrue-generator-plugin:1.1.0-SNAPSHOT')
+        classpath 'com.github.peacetrue.template:peacetrue-template-model-content:3.0.0-SNAPSHOT', {
+            exclude group: 'ch.qos.logback'
+        }
+        classpath('com.h2database:h2:1.4.196')
+        classpath "io.spring.gradle:dependency-management-plugin:1.0.8.RELEASE"
+        classpath "org.springframework.boot:spring-boot-gradle-plugin:2.3.3.RELEASE"
     }
 }
 
-subprojects { project ->
 
-    apply plugin: 'io.spring.dependency-management'
+allprojects { project ->
+
+    group "com.github.peacetrue.log"
+    version '2.0-SNAPSHOT'
+    description "操作日志"
+
+    apply plugin: "java-library"
+    sourceCompatibility = 8
+    targetCompatibility = 8
+
+    repositories {
+        mavenLocal()
+        mavenCentral()
+        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+        maven { url 'https://repo.spring.io/plugins-release' }
+    }
+
+    apply plugin: "io.spring.dependency-management"
     dependencyManagement {
         imports {
-            mavenBom "org.springframework.boot:spring-boot-dependencies:1.5.20.RELEASE"
-        }
-
-        dependencies {
-            dependency 'com.google.code.findbugs:jsr305:1.3.9'
-            dependency 'org.projectlombok:lombok:1.18.6'
-            dependency 'io.github.benas:random-beans:3.7.0'
-            dependency 'org.unitils:unitils-core:3.4.2'
-            dependency 'mysql:mysql-connector-java:5.1.46'
-            dependency 'com.h2database:h2:1.4.196'
-            dependency 'org.mybatis:mybatis:3.4.6'
-            dependency 'org.mybatis:mybatis-spring:1.3.0'
-            dependency 'org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.2'
-            dependency 'org.mybatis.dynamic-sql:mybatis-dynamic-sql:1.1.2'
-            dependency 'com.github.pagehelper:pagehelper:5.1.2'
-            dependency 'com.github.pagehelper:pagehelper-spring-boot-starter:1.2.3'
-            dependency 'org.aspectj:aspectjweaver:1.9.0'
+            mavenBom "com.github.peacetrue:peacetrue-dependencies:2.0.0-SNAPSHOT"
         }
     }
-
-    group 'com.github.peacetrue.log'
-    version '2.0-SNAPSHOT'
-    description '基于spring-boot的操作日志组件'
-
-    apply plugin: 'java'
-    apply plugin: 'java-library'
-    sourceCompatibility = 1.8
 
     dependencies {
         compileOnly "org.projectlombok:lombok"
         annotationProcessor "org.projectlombok:lombok"
-        compile 'com.google.code.findbugs:jsr305'
+        implementation "com.google.code.findbugs:jsr305"
 
-        testCompile "junit:junit"
+        testImplementation 'org.junit.jupiter:junit-jupiter-api'
+        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+        testImplementation('org.springframework.boot:spring-boot-starter-test') {
+            exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+        }
+
         testCompileOnly "org.projectlombok:lombok"
         testAnnotationProcessor "org.projectlombok:lombok"
-    }
-
-    //样章不需要打包
-    if (name.endsWith('sample')) return
-
-    task sourcesJar(type: Jar) {
-        archiveClassifier = 'sources'
-        from sourceSets.main.allJava
-    }
-
-    task javadocJar(type: Jar) {
-        archiveClassifier = 'javadoc'
-        from javadoc.destinationDir
-    }
-
-    def repository_snapshots = "https://oss.sonatype.org/content/repositories/snapshots/"
-    def repository_releases = "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
-
-    apply plugin: 'maven-publish'
-    apply plugin: 'signing'
-    publishing {
-        publications {
-            mavenJava(MavenPublication) {
-                pom {
-                    name = project.name
-                    description = project.description
-                    url = 'https://github.com/peacetrue/log'
-                    licenses {
-                        license {
-                            name = 'The Apache License, Version 2.0'
-                            url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-                        }
-                    }
-                    developers {
-                        developer {
-                            id = 'xiayouxue'
-                            name = 'xiayouxue'
-                            email = 'xiayouxue@hotmail.com'
-                        }
-                    }
-                    scm {
-                        connection = 'https://github.com/peacetrue/log.git'
-                        developerConnection = 'https://github.com/peacetrue/log.git'
-                        url = 'https://github.com/peacetrue/peacetrue/log'
-                    }
-                }
-
-                from components.java
-
-                artifact sourcesJar
-                artifact javadocJar
-            }
-        }
-
-        repositories {
-            maven {
-                url version.endsWith('SNAPSHOT') ? repository_snapshots : repository_releases
-                credentials {
-                    username = ossrhUsername
-                    password = ossrhPassword
-                }
-            }
+        testImplementation "ch.qos.logback:logback-classic"
+        testImplementation 'io.projectreactor:reactor-test'
+        testImplementation 'org.unitils:unitils-core'
+        testImplementation 'org.jeasy:easy-random-core'
+        testImplementation 'org.yaml:snakeyaml'
+        testImplementation 'org.jeasy:easy-random-bean-validation', {
+            exclude('group': 'org.yaml')
         }
     }
 
-    signing {
-        sign publishing.publications.mavenJava
+    test {
+        useJUnitPlatform()
     }
 
 }
-
-
-
-
-
-
-
