--- a/peacetrue-log-aspect/src/test/resources/application.properties
+++ b/peacetrue-log-aspect/src/test/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.initialize=true
 spring.jpa.generate-ddl=true
-peacetrue.log.concreteClass=com.github.peacetrue.log.sample.Log
+spring.r2dbc.pool.enabled=false
 logging.level.com.github.peacetrue=trace
 #tag::pointcut-infos[]
 peacetrue.log.pointcut-infos.UserServiceImpl_modify.module-code=user
